--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <title>BrickLayer</title>
-  <link rel="stylesheet" href="https://jsdev.arcgis.com/4.4/esri/css/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.12/esri/css/main.css">
 
   <style>
     html,
@@ -25,7 +25,7 @@
       }
     };
   </script>
-  <script src="https://jsdev.arcgis.com/4.4/"></script>
+  <script src="https://js.arcgis.com/4.12/"></script>
 
   <style>
     html,
